<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHomepage"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".homepage.view.activity.HomePageActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/homepage_inc_toolbar" />

    <FrameLayout
        android:background="@android:color/black"
        android:layout_height="@dimen/constraint_zero"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/clHomepageAnimalPost"
        app:layout_constraintTop_toTopOf="@id/clHomepageAnimalPost" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHomepageAnimalPost"
        android:layout_height="@dimen/constraint_zero"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/btnHomepageTickets"
        app:layout_constraintTop_toBottomOf="@id/homepage_inc_toolbar">

        <ImageView
            android:contentDescription="@string/cnt_featured_animals"
            android:id="@+id/ivHomepageAnimalImage"
            android:layout_height="@dimen/constraint_zero"
            android:layout_marginBottom="@dimen/margin_padding_medium"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tvHomepageAnimalHeadline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:background="@android:color/black"
            android:fontFamily="@font/fjalla"
            android:id="@+id/tvHomepageAnimalHeadline"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_large"
            android:layout_width="match_parent"
            android:textColor="@color/colorScheduleBgGrey"
            android:textSize="@dimen/textsize_title_medium"
            app:layout_constraintBottom_toTopOf="@id/tvHomepageAnimalDescription" />

        <TextView
            android:fontFamily="@font/prompt"
            android:id="@+id/tvHomepageAnimalDescription"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_large"
            android:layout_width="match_parent"
            android:textColor="@color/colorDefaultTextWhite"
            android:textSize="@dimen/textsize_title_small"
            app:layout_constraintBottom_toTopOf="@id/btnHomepageLearnMore" />

        <Button
            android:background="@drawable/btn_ripple"
            android:elevation="@dimen/elevation_button_default"
            android:fontFamily="@font/prompt"
            android:id="@+id/btnHomepageLearnMore"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_large"
            android:layout_width="wrap_content"
            android:onClick="learnMore"
            android:padding="@dimen/margin_padding_large"
            android:text="@string/learn_more"
            android:textColor="@color/colorDefaultTextWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        style="?android:buttonBarStyle"
        android:background="@drawable/btn_ripple"
        android:elevation="@dimen/elevation_button_default"
        android:fontFamily="@font/prompt"
        android:id="@+id/btnHomepageCategories"
        android:layout_height="@dimen/height_btn_bar"
        android:layout_width="@dimen/constraint_zero"
        android:onClick="goToCategories"
        android:text="@string/categories"
        android:textColor="@color/colorDefaultTextWhite"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnHomepageTickets"
        app:layout_constraintEnd_toStartOf="@+id/btnHomepageTickets"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="?android:buttonBarStyle"
        android:background="@drawable/btn_ripple_green"
        android:elevation="@dimen/elevation_button_default"
        android:fontFamily="@font/prompt"
        android:id="@+id/btnHomepageTickets"
        android:layout_height="50dp"
        android:layout_width="@dimen/constraint_zero"
        android:text="@string/tickets"
        android:textColor="@color/colorDefaultTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnHomepageAnimals"
        app:layout_constraintStart_toEndOf="@+id/btnHomepageCategories" />

    <Button
        style="?android:buttonBarStyle"
        android:background="@drawable/btn_ripple"
        android:elevation="@dimen/elevation_button_default"
        android:fontFamily="@font/prompt"
        android:id="@+id/btnHomepageAnimals"
        android:layout_height="50dp"
        android:layout_width="@dimen/constraint_zero"
        android:onClick="goToAnimals"
        android:text="@string/animals"
        android:textColor="@color/colorDefaultTextWhite"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnHomepageTickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHomepageTickets" />
</androidx.constraintlayout.widget.ConstraintLayout>