<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rv_item_box"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvAnimalName"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/cnt_photo_of_animal"
        android:id="@+id/ivAnimalImage"
        android:layout_height="150dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_width="210dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAnimalName" />

    <TextView
        android:id="@+id/tvScientificName"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_width="wrap_content"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="0.05"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/ivAnimalImage"
        app:layout_constraintEnd_toEndOf="@id/ivAnimalImage" />

    <TextView
        android:id="@+id/tvDietLabel"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_width="0dp"
        android:text="@string/diet"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvStatusLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivAnimalImage" />

    <TextView
        android:id="@+id/tvDiet"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvDietLabel"
        app:layout_constraintTop_toBottomOf="@id/tvDietLabel" />

    <TextView
        android:id="@+id/tvStatusLabel"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:text="@string/status"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvRangeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDietLabel" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvStatusLabel"
        app:layout_constraintTop_toBottomOf="@id/tvStatusLabel" />

    <TextView
        android:id="@+id/tvRangeLabel"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="8dp"
        android:layout_width="0dp"
        android:text="@string/range"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivAnimalImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRange"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="2dp"
        android:layout_width="0dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/ivAnimalImage"
        app:layout_constraintStart_toStartOf="@id/tvRangeLabel"
        app:layout_constraintTop_toBottomOf="@id/tvRangeLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>